# hyesg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hyesg-prd.md
src/hyesg/: __init__.py  outputs.py
src/hyesg/calibration/: __init__.py  calibrator.py  objectives.py  optimizer.py  protocols.py  result.py  sabr.py  yield_curve_config.py  yield_curve_model.py  yield_curves.py
src/hyesg/config/: __init__.py  builder.py  calibration_builder.py  calibration_params.py  default_setup.py  economy.py  factor_equity.py  fee_wrappers.py  fund_builder.py  fund_catalogue.py  funds.py  models.py  params.py  simulation_setup.py  templates.py  validation.py
src/hyesg/core/: __init__.py  constants.py  domain_types.py  enums.py  matrix.py  protocols.py  registry.py  types.py
src/hyesg/engine/: __init__.py  antithetic.py  copula.py  correlation.py  output.py  quanto.py  regime.py  rng.py  simulator.py  workload.py
src/hyesg/io/: __init__.py  correlation_csv.py  csv_io.py  hdf5_io.py  parquet_io.py  (+1 more)
tests/: conftest.py
tests/calibration/: test_calibrator.py  test_objectives.py  test_optimizer.py  test_robust_lm.py  test_sabr.py  test_yield_curves.py
tests/config/: test_builder.py  test_calibration_params.py  test_economy.py  test_factor_equity.py  test_fund_catalogue.py  test_funds.py  test_models.py  test_params.py  test_simulation_setup.py  test_validation.py
tests/core/: test_constants.py  test_domain_types.py  test_enums.py  test_matrix.py  test_protocols.py  test_registry.py  test_types.py
tests/engine/: test_antithetic.py  test_copula.py  test_copula_extended.py  test_correlation.py  test_correlation_repair.py  test_output.py  test_quanto.py  test_regime.py  test_rng.py  test_rng_streams.py  test_simulator.py  test_workload.py
tests/integration/: test_end_to_end.py  test_full_setup.py  test_pipeline_wiring.py
tests/io/: conftest.py  test_csv_io.py  test_hdf5_io.py  test_parquet_io.py  test_streaming.py
tests/market_data/: __init__.py  test_calibration_reader.py  test_constants.py  test_file_provider.py  test_minor_calibration.py  test_protocols.py  test_snapshot.py  test_transforms.py
tests/math/: test_analytic_phi.py  test_bond_analytics.py  test_cir_formulas.py  test_g2pp_analytics.py  test_gaussian_helpers.py  test_jump_utils.py  test_pricing.py  test_quadrature.py  test_transforms.py
tests/orchestration/: conftest.py  test_batch.py  test_correlation_assembler.py  test_correlation_csv_assembly.py  test_dependency_graph.py  test_device.py  test_pipeline.py  test_steps.py
tests/testing/: conftest.py  test_comparison.py  test_golden_master.py  test_report.py  test_tolerance.py
(+201 files in other folders)
